Use better font.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <!-- https://replit.com/@mrjsng/HTML-CSS-Intro -->
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Portfolio</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
 <header>
     <ul id="menu" class="shadow" style="">
