Add Github API Caching every 10 min

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yik Wee's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- <script src="js/apiCache.js"></script> -->
     <script src="js/appWindowElement.js"></script>
     <script src="js/githubAPI.js"></script>
 </head>
 
 <body>
+    <!--[if IE]>
+        <div>INTERNET EXPLORER IS NOT SUPPORTED</div>
+    <![endif]-->
     <div class="desktop">
         <div class="menu">
             <div onclick="spawnAboutMe()">
